--- a/src/assets/stylesheets/_main.scss
+++ b/src/assets/stylesheets/_main.scss
@@ -50,6 +50,10 @@
 .main-bg {
   background-color: #010101;
   width: 100%;
+
+  .h1 {
+    margin-left: 4rem;
+  }
 }
 
 .product-box {
@@ -83,27 +87,33 @@
   margin: 5px;
 }
 .text_id {
-  font-size: .75rem;
-  color:lightblue;
+  font-size: 0.75rem;
+  color: lightblue;
 }
 
 .height-user {
   height: 20rem;
+  p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 .color_gradient {
   width: 16rem;
-  border: 2px solid;
-  background: linear-gradient(to right, #AC32E4, #4A02FE);
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  // border-image: linear-gradient(to right, #AC32E4, #4A02FE);
-  padding: .75rem 1rem;
-  font-size: .85rem;
-  // width: 150px;
+  border: 2px solid !important;
+  border-image: linear-gradient(45deg, #ac32e4, #4a02fe) 1 !important ;
 
+  // background: linear-gradient(to right, #ac32e4, #4a02fe);
+  // background-clip: text;
+  // -webkit-text-fill-color: transparent;
+  // border-image: linear-gradient(to right, #AC32E4, #4A02FE);
+  padding: 0.75rem 1rem;
+  font-size: 0.85rem;
+  // width: 150px;
 }
 .active_follow {
-  background: linear-gradient(to right, #AC32E4, #4A02FE);
+  background: linear-gradient(to right, #ac32e4, #4a02fe);
   -webkit-text-fill-color: #fff;
   color: #fff;
   font-weight: bold;
@@ -114,12 +124,26 @@
   height: 20rem;
   border-radius: 10px;
   border: 1px solid #494949;
-  background: #1A1A1A;
+  background: #1a1a1a;
   // opacity: 40%;
 }
-.shuffle > img, span {
+
+.shuffle > img,
+span {
   color: #fff;
 }
+
+.sm-width {
+  .btn_setting:first-of-type {
+    background-color: #494949;
+    color: blue;
+  }
+   .btn_setting ~ .btn_setting {
+    background-color: transparent;
+    color: white;
+}
+}
+
 @media screen and (max-width: 375px) {
   .smviewb {
     display: inline-block;
