--- a/src/assets/stylesheets/_main.scss
+++ b/src/assets/stylesheets/_main.scss
@@ -102,6 +102,14 @@ span {
   .sm-margin {
     margin-top: 2.5rem;
   }
+  .w-80 {
+    width: 80%;
+    margin: 10px 20px;
+  }
+  .sm-width {
+    width: 44% !important;
+    margin: 10px;
+  }
   .overflow_image {
     overflow: scroll;
   }
@@ -121,7 +129,7 @@ span {
     overflow: hidden;
   }
   .sm-width {
-    width: 80%;
+    width: 22%;
     margin: 10px;
   }
   .height-user {
